[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/MainMenu/main_menu.gd" type="Script" id=8]

[node name="MainMenu" type="MarginContainer"]
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_right = 243.0
margin_bottom = 44.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_right = 137.0
margin_bottom = 44.0

[node name="StartButton" type="Button" parent="Menu/VBoxContainer"]
margin_right = 137.0
margin_bottom = 20.0
text = "Start New Game"

[node name="LoadGameButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 137.0
margin_bottom = 44.0
text = "Load Existing Game"

[node name="CenterContainer" type="VBoxContainer" parent="Menu"]
margin_left = 141.0
margin_right = 204.0
margin_bottom = 44.0

[node name="CreditsButton" type="Button" parent="Menu/CenterContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Credits"

[node name="SettingsButton" type="Button" parent="Menu/CenterContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Settings"

[node name="ExitButton" type="Button" parent="Menu"]
margin_left = 208.0
margin_right = 243.0
margin_bottom = 44.0
text = "Exit"
[connection signal="pressed" from="Menu/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/ExitButton" to="." method="_on_ExitButton_pressed"]
